src/ui/snapshots/gitt__ui__branch__tests__br_01_list_snapshot.snap
---
source: src/ui/branch.rs
expression: "render_to_string(&s, 80, 12)"
---
Search:   (3 matches)
*   feature                                  loading… 3 days ago
    main                                     loading… 2 weeks ago
    wip-parser                               loading… 1 hour ago



┌ai summary────────────────────────────────────────────────────────────────────┐
│press @ for an AI summary                                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
j/k · /search · @ summary · p PRs · n new · d delete · Enter · R reload · q quit
