src/ui/snapshots/gitt__ui__branch__tests__br_03_filtered_snapshot.snap
---
source: src/ui/branch.rs
expression: "render_to_string(&s, 80, 12)"
---
 feature (branches)   3 branches
Search: parser█  (1 matches)
    wip-parser                               loading… 1 hour ago




┌ai summary────────────────────────────────────────────────────────────────────┐
│press s for an AI summary                                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
j/k · /search · s summary · n new · d delete · Enter · R reload · q quit
