src/ui/snapshots/gitt__ui__branch__tests__br_05_menu_snapshot.snap
---
source: src/ui/branch.rs
expression: "render_to_string(&s, 80, 12)"
---
Search:   (3 matches)
*   feature                                  loading… 3 days ago
    main                     ┌ wip-parser ───────┐ng… 2 weeks ago
    wip-parser               │ Checkout          │ng… 1 hour ago
                             │ Open Pull Request │
                             │ Copy name         │
                             │ Close PR          │
                             │ Delete branch     │
                             └───────────────────┘


j/k · /search · @ summary · o open · n new · d del · Enter · R reload · q quit
