src/ui/snapshots/gitt__ui__branch__tests__br_09_confirm_snapshot.snap
---
source: src/ui/branch.rs
expression: "render_to_string(&s, 80, 12)"
---
Search:   (3 matches)
*   feature                                  loading… 3 days ago
    main                                     loading… 2 weeks ago
    wip-parser                               loading… 1 hour ago
                         ┌ Delete branch? ───────────┐
                         │ Delete branch wip-parser? │
                         │ y  delete    n  cancel    │
┌ai summary──────────────└───────────────────────────┘─────────────────────────┐
│press s for an AI summary                                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
j/k · /search · s summary · n new · d delete · Enter · R reload · q quit
