src/ui/snapshots/gitt__ui__branch__tests__br_10_create_snapshot.snap
---
source: src/ui/branch.rs
expression: "render_to_string(&s, 80, 12)"
---
 feature (branches)   3 branches
Search:   (3 matches)
*   feature                                  loading… 3 days ago
    main                                     loading… 2 weeks ago
    wip-parser          ┌ New branch ──────────────────┐hour ago
                        │ feature-x█                   │
                        │ Enter  create    Esc  cancel │
┌ai summary─────────────└──────────────────────────────┘───────────────────────┐
│press s for an AI summary                                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
j/k · /search · s summary · n new · d delete · Enter · R reload · q quit
