src/ui/snapshots/gitt__ui__branch__tests__br_11_summary_ready_snapshot.snap
---
source: src/ui/branch.rs
expression: "render_to_string(&s, 80, 12)"
---
Search:   (3 matches)
* ✦ feature                                  loading… 3 days ago
    main                                     loading… 2 weeks ago
    wip-parser                               loading… 1 hour ago



┌ai summary────────────────────────────────────────────────────────────────────┐
│Adds an in-process fuzzy finder over the branch list.                         │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
j/k · /search · @ summary · o open · n new · d del · Enter · R reload · q quit
