src/ui/snapshots/gitt__ui__branch__tests__br_17_pr_column_snapshot.snap
---
source: src/ui/branch.rs
expression: out
---
 feature (branches)   3 branches
Search:   (3 matches)
*   feature                                  —        3 days ago
    main                                     merged   2 weeks ago
    wip-parser                               open     1 hour ago


┌ai summary────────────────────────────────────────────────────────────────────┐
│press s for an AI summary                                                     │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
j/k · /search · s summary · n new · d delete · Enter · R reload · q quit
