src/ui/snapshots/gitt__ui__branch__tests__loading_snapshot.snap
---
source: src/ui/branch.rs
expression: "render_to_string(&s, 80, 8)"
---
Search:   (0 matches)
Loading branches…





j/k · /search · @ summary · o open · n new · d del · Enter · R reload · q quit
